--- a/WebForAlumni/pom.xml
+++ b/WebForAlumni/pom.xml
@@ -63,6 +63,11 @@
             <version>5.2.1.RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
             <version>5.2.1.RELEASE</version>
