--- a/WebForAlumni/src/main/resources/message.properties
+++ b/WebForAlumni/src/main/resources/message.properties
@@ -2,4 +2,6 @@
 # Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 # Click nbfs://nbhost/SystemFileSystem/Templates/Other/properties.properties to edit this template
 
-post.content.errMsg= H?y nh?p n?i dung ph\u00f9 h?p;
+
+post.content.errMsg= Nh\u1eadp n\u1ed9i dung t\u1ed1i thi\u1ec3u 1 k\u00fd t\u1ef1;
+
