--- a/socialweb/package.json
+++ b/socialweb/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.4.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/lab": "^6.0.0-beta.8",
@@ -10,8 +11,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.20.5",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
+    "date-fns": "^3.6.0",
+    "firebase": "^10.13.1",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "nodemailer": "^6.9.15",
     "react": "^18.3.1",
@@ -22,6 +27,8 @@
     "react-router-dom": "^6.26.1",
     "react-scripts": "^5.0.1",
     "react-simple-timestamp-to-date": "^1.0.3",
+    "react-timestamp": "^6.0.0",
+    "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
